2015-09-16  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gplink/gplink.c, gputils/gplib.c, gputils/gpstrip.c,
    gputils/gpvo.c, libgputils/gpreadobj.c, libgputils/gpreadobj.h:
    Changed the members name of enum gp_coff_type.

2015-09-16  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * gputils/gpdasm.c:
    Explicity initialize the members of gpdasm_state structure.
    The unexpand() correctly handle the newline characters.
    Renamed the ux_println() to ux_print().
    The ux_print() got a new parameter: "newline"
    Changed the use of ux_print().

  * gputils/gplib.c:
    Explicity initialize the members of gplib_state structure.

2015-09-16  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * header/p16f1xxx.inc:
    Changed to the gpasm specific version.

  * header/p18cxxx.inc:
    Added an gpasm specific example and the __18CXX section.

2015-09-15  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * header/*, lkr/*, man/gpasm.1.in:
    Updated based on the mplabx-3.10, part 2.

2015-09-15  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx, configure, configure.ac, header/*,
    gpasm/gpasm.c, gpasm/list.c, gpasm/processor.c,
    gpasm/testsuite/gpasm.mchip/asmfiles/hd871.asm,
    gpasm/testsuite/gpasm.mchip/asmfiles/hd872.asm,
    gpasm/testsuite/gpasm.mchip/asmfiles/hd873.asm,
    gputils/gpdasm.c, libgputils/gpcfg-table.c,
    libgputils/gpcfg.c, libgputils/gpcfg.h, libgputils/gpdis.c,
    libgputils/gpprocessor.c, libgputils/gpprocessor.h,
    libgputils/gpreg-table.c, lkr/*:
    Updated based on the mplabx-3.10.

2015-08-20  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx, gpasm/ppparse.y:
    Fixed the bug: "#284 Cannot suppress "Symbol xxx not assigned a value" message"
    Thanks to Kurt Deitrick.

2015-08-19  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
  * doc/gputils.lyx, gpasm/gpasm:
    Fixed the bug: "#283 Option documentation"
    Thanks to Kurt Deitrick.
