@@ -67,7 +67,6 @@
 \html_math_output 0
 \html_css_as_file 0
 \html_be_strict false
-\author 2090626461 "prog" 
 \end_header
 
 \begin_body
@@ -81,7 +80,7 @@ James Bowman, Craig Franklin, David Barnett, Borut Ražem and Molnár Károly
 \end_layout
 
 \begin_layout Date
-Sep 15, 2015
+Sep 24, 2015
 \end_layout
 
 \begin_layout Standard
@@ -373,6 +372,7 @@ p16cr65        p16cr72        p16cr83        p16cr84        p16cr620a
     p16cxx         
 \begin_inset Newline newline
 \end_inset
+
                                                                        
                    
 \begin_inset Newline newline
@@ -637,6 +637,7 @@ p16lf18875     p16lf18876     p16lf18877     p16f1xxx
                    
 \begin_inset Newline newline
 \end_inset
+
                                                                        
                    
 \begin_inset Newline newline
@@ -651,6 +652,7 @@ p17c756a       p17c762        p17c766        p17cr42        p17cr43
     p17cxx         
 \begin_inset Newline newline
 \end_inset
+
                                                                        
                    
 \begin_inset Newline newline
@@ -665,6 +667,7 @@ p18c801        p18c858        p18cxx
                    
 \begin_inset Newline newline
 \end_inset
+
                                                                        
                    
 \begin_inset Newline newline
@@ -1009,6 +1012,7 @@ p18lf8722      p18lf8723
                    
 \begin_inset Newline newline
 \end_inset
+
                                                                        
                    
 \begin_inset Newline newline
@@ -1573,7 +1577,8 @@ Enables the creation of the error file.
 \begin_inset Text
 
 \begin_layout Plain Layout
-List the supported processors based on various aspects. (f => x)
+List the supported processors based on various aspects.
+ ('f' mean 'x')
 \end_layout
 
 \end_inset
@@ -2133,7 +2138,8 @@ hex
 \begin_layout Plain Layout
 Lists properties of the processors.
  Using by itself, displays the all devices or group of the devices.
- Along with the '-p' option, shows only the specified device. (f => x)
+ Along with the '-p' option, shows only the specified device.
+ ('f' mean 'x')
 \end_layout
 
 \end_inset
@@ -2292,7 +2298,7 @@ Meaning
 
 \begin_layout Plain Layout
 Help to the extension of the pic14devices.txt file in the sdcc project.
- Using by itself, displays the all '14' and '14e' devices.
+ Using by itself, displays the all '14', '14e' and '14f' devices.
  Along with the '-p' option, shows only the specified device.
 \end_layout
 
