@@ -1,3 +1,7 @@
+2015-09-24  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
+  * doc/gputils.lyx, gpasm/gpasm.c:
+    Changed the explanations of some options.
+
 2015-09-16  Molnar Karoly  <molnarkaroly@users.sourceforge.net>
   * gplink/gplink.c, gputils/gplib.c, gputils/gpstrip.c,
     gputils/gpvo.c, libgputils/gpreadobj.c, libgputils/gpreadobj.h:
